--- a/Components/linkedList/CMakeLists.txt
+++ b/Components/linkedList/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "linkedList.c"
                     INCLUDE_DIRS "include"
-                    ) #https://docs.espressif.com/projects/esp-idf/en/latest/esp32s3/api-guides/build-system.html#example-of-component-requirements
+                    PRIV_REQUIRES log) #https://docs.espressif.com/projects/esp-idf/en/latest/esp32s3/api-guides/build-system.html#example-of-component-requirements
