--- a/Components/wifiControl/CMakeLists.txt
+++ b/Components/wifiControl/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "wifi.c"
                     INCLUDE_DIRS "include"
-                    PRIV_REQUIRES esp_wifi log freertos nvs_flash) #https://docs.espressif.com/projects/esp-idf/en/latest/esp32s3/api-guides/build-system.html#example-of-component-requirements
+                    PRIV_REQUIRES esp_wifi log freertos nvs_flash flashStorage) #https://docs.espressif.com/projects/esp-idf/en/latest/esp32s3/api-guides/build-system.html#example-of-component-requirements
